--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,8 @@
 {
-  "name": "angular-daterangepicker",
-  "version": "0.2.2",
-  "homepage": "https://github.com/fragaria/angular-daterangepicker",
+  "name": "angular-daterangepicker-labworks",
+  "version": "0.2.5",
+  "homepage": "https://github.com/dmitryrazinkov/angular-daterangepickerr",
   "main": "js/angular-daterangepicker.js",
-  "authors": [
-    "Filip Vařecha <filip.varecha@fragaria.cz>",
-    "Tibor Kulčár <tibor.kulcar@fragaria.cz>",
-    "Lukáš Marek <lukas.marek@fragaria.cz>"
-  ],
   "description": "Angular.js wrapper for Dan Grosmann's bootstrap date range picker (https://github.com/dangrossman/bootstrap-daterangepicker).",
   "license": "MIT",
   "private": false,
@@ -21,7 +16,7 @@
   "dependencies": {
     "angular": "^1.2.17",
     "bootstrap": "^3.0.0",
-    "bootstrap-daterangepicker": "^2.0.0"
+    "bootstrap-daterangepicker-labworks": "^2.1.32"
   },
   "devDependencies": {
     "angular-messages": "^1.2.17"
